[gd_scene load_steps=7 format=3 uid="uid://c3ddds4qg5top"]

[ext_resource type="Script" path="res://player.gd" id="1_34tk8"]
[ext_resource type="Texture2D" uid="uid://8lmrsdwuf3lb" path="res://Art/icon.svg" id="2_g4egl"]
[ext_resource type="PackedScene" uid="uid://cx4kog32xwdju" path="res://Physics/water_detection_2d.tscn" id="3_k7s22"]
[ext_resource type="Script" path="res://SpikeDetection2D.gd" id="4_ttmt8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6cdbi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_spqv3"]
radius = 23.0868

[node name="Player" type="CharacterBody2D"]
top_level = true
position = Vector2(71, 322)
collision_mask = 7
script = ExtResource("1_34tk8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.19209e-07, 1.19209e-07)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("2_g4egl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_6cdbi")

[node name="RightWall" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 9

[node name="LeftWall" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(16, 0)
collision_mask = 9

[node name="GrapplingRayCasts" type="Node2D" parent="."]
visible = false
rotation = -1.5708

[node name="Raycast01" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(0, 25)
target_position = Vector2(500, 0)

[node name="Raycast02" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(1, 25)
rotation = -0.0872665
target_position = Vector2(500, 0)

[node name="Raycast03" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-1, 25)
rotation = 0.0872665
target_position = Vector2(500, 0)

[node name="Raycast04" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(2, 25)
rotation = -0.174533
target_position = Vector2(500, 0)

[node name="Raycast05" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-2, 25)
rotation = 0.174533
target_position = Vector2(500, 0)

[node name="Raycast06" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(3, 25)
rotation = -0.261799
target_position = Vector2(500, 0)

[node name="Raycast07" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-3, 25)
rotation = 0.261799
target_position = Vector2(500, 0)

[node name="Raycast08" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(4, 25)
rotation = -0.349066
target_position = Vector2(500, 0)

[node name="Raycast09" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-4, 25)
rotation = 0.349066
target_position = Vector2(500, 0)

[node name="Raycast10" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(5, 25)
rotation = -0.436332
target_position = Vector2(500, 0)

[node name="Raycast11" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-5, 25)
rotation = 0.436332
target_position = Vector2(500, 0)

[node name="Raycast12" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(6, 25)
rotation = -0.523599
target_position = Vector2(500, 0)

[node name="Raycast13" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-6, 25)
rotation = 0.523599
target_position = Vector2(500, 0)

[node name="Raycast14" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(7, 25)
rotation = -0.610865
target_position = Vector2(500, 0)

[node name="Raycast15" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-7, 25)
rotation = 0.610865
target_position = Vector2(500, 0)

[node name="Raycast16" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(8, 25)
rotation = -0.698132
target_position = Vector2(500, 0)

[node name="Raycast17" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-8, 25)
rotation = 0.698132
target_position = Vector2(500, 0)

[node name="Raycast18" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(9, 25)
rotation = -0.785398
target_position = Vector2(500, 0)

[node name="Raycast19" type="RayCast2D" parent="GrapplingRayCasts"]
position = Vector2(-9, 25)
rotation = 0.785398
target_position = Vector2(500, 0)

[node name="Interaction Components" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="Interaction Components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/InteractionArea"]
shape = SubResource("CircleShape2D_spqv3")

[node name="InteractLabel" type="Label" parent="Interaction Components"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -50.0
offset_right = 70.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
text = "Testing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaterDetection2D" parent="." instance=ExtResource("3_k7s22")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="SpikeDetection2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("4_ttmt8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeDetection2D"]
visible = false
shape = SubResource("RectangleShape2D_6cdbi")

[connection signal="area_entered" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="water_state_changed" from="WaterDetection2D" to="." method="_on_water_detection_2d_water_state_changed"]
[connection signal="body_entered" from="SpikeDetection2D" to="SpikeDetection2D" method="_on_body_entered"]
[connection signal="body_exited" from="SpikeDetection2D" to="SpikeDetection2D" method="_on_body_exited"]
